// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main component page descriptors with app 1`] = `
<Main
  path="/"
>
  <section
    className="pf-l-page__main-section pf-c-page__main-section"
    page-type="some-app"
  >
    Something
  </section>
</Main>
`;

exports[`Main component page descriptors with dynamic path and params 1`] = `
<Main
  params={
    Object {
      "ID": "1",
    }
  }
  path="/another/:ID"
>
  <section
    className="pf-l-page__main-section pf-c-page__main-section"
    data-id="1"
    page-type="some-app-another"
  >
    Something
  </section>
</Main>
`;

exports[`Main component page descriptors with path 1`] = `
<Main
  path="/another/url/parts"
>
  <section
    className="pf-l-page__main-section pf-c-page__main-section"
    page-type="some-app-another-url-parts"
  >
    Something
  </section>
</Main>
`;

exports[`Main component should render correctly without app 1`] = `
<Main>
  <section
    className="pf-l-page__main-section pf-c-page__main-section"
    page-type=""
  >
    Something
  </section>
</Main>
`;
